# cmake_example

./: CMakeLists.txt  build.sh  python_infer.py  tttt.py
src/: infer.cpp  main.cpp  test.cpp
